--- a/TradeLog/App.config
+++ b/TradeLog/App.config
@@ -3,6 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <connectionStrings>
+    <add name="TradeLogMySQL" connectionString="server=localhost;userid=admin;database=tradelog;password=admin;SslMode=none"/>
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
